--- a/src/frontend/realtime-app-ui/src/app/components/navbar/navbar.component.html
+++ b/src/frontend/realtime-app-ui/src/app/components/navbar/navbar.component.html
@@ -6,11 +6,13 @@
     <a routerLink="/">Realtime App</a>
     <div class="w-full"></div>
 
+
     @if(isLoggedIn()){
-    <div *ngIf="userService.getUserDetail() as userDetail">
+    <div *ngIf="authService.getUserDetailFromToken() as userDetail">
       <div class="flex gap-5 items-center">
         <a [matMenuTriggerFor]="menu" class="flex gap-2 cursor-pointer items-center">
-          <div class="bg-red-400 text-white font-bold shadow-md rounded-full w-5 h-5 p-5 flex justify-center items-center">
+          <div
+            class="bg-red-400 text-white font-bold shadow-md rounded-full w-5 h-5 p-5 flex justify-center items-center">
             {{userDetail!.email[0].toUpperCase()}}
           </div>
           <div class="text-white flex flex-col">
@@ -23,7 +25,7 @@
           </div>
         </a>
         <mat-menu #menu="matMenu">
-          <button [routerLink]="['account',userDetail.id]" mat-menu-item>
+          <button [routerLink]="['profile',userDetail.id]" mat-menu-item>
             <mat-icon>account_circle</mat-icon>
             <span>
               View Profile
@@ -41,28 +43,28 @@
             groups
           </mat-icon>
           Users
-          </a>
-          <a *ngIf="userDetail?.roles.includes('Admin')" mat-button routerLink="/roles">
-            <mat-icon>
-              settings
-            </mat-icon>
-            Roles
+        </a>
+        <a *ngIf="userDetail?.roles.includes('Admin')" mat-button routerLink="/roles">
+          <mat-icon>
+            settings
+          </mat-icon>
+          Roles
         </a>
       </div>
     </div>
     }@else{
-<div>
-  <div class="flex gap5 items-center">
-    <a mat-button routerLink="/login">
-      Login
-    </a>
+    <div>
+      <div class="flex gap5 items-center">
+        <a mat-button routerLink="/login">
+          Login
+        </a>
 
-    <a mat-button routerLink="/register">
-      Register
-    </a>
+        <a mat-button routerLink="/register">
+          Register
+        </a>
 
-  </div>
-  </div>
+      </div>
+    </div>
     }
 
   </mat-toolbar>
