--- a/src/frontend/realtime-app-ui/src/app/pages/dashboard/dashboard.component.html
+++ b/src/frontend/realtime-app-ui/src/app/pages/dashboard/dashboard.component.html
@@ -1,18 +1,30 @@
+
+<div>
+    {{socketData}}
+</div>
 <div style="margin: 50px;">
     <div>
         <ag-grid-angular [rowData]="rowData" [columnDefs]="colDefs" class="ag-theme-quartz"
-            (cellValueChanged)="edit($event)" style="height: 550px;" [pagination]="pagination"
-            [paginationPageSize]="paginationPageSize" [paginationPageSizeSelector]="paginationPageSizeSelector">
+            style="height: 550px;" [pagination]="pagination"
+            [paginationPageSize]="paginationPageSize" [paginationPageSizeSelector]="paginationPageSizeSelector"
+            (cellValueChanged)="edit($event)"
+            (gridReady)="onGridReady($event)">
         </ag-grid-angular>
     </div>
+
+
     <div *ngIf="!isOn">
         <ejs-dialog id='dialog' #ejDialog content='This is a Dialog with content' width='250px' />
 
     </div>
 
-    <ejs-accumulationchart id="chart-container" [legendSettings]='legendSettings' (pointClick)='pointClick($event)'>
+    <ejs-accumulationchart id="chart-container" 
+    [legendSettings]='legendSettings'
+    (pointClick)='pointClick($event)'>
         <e-accumulation-series-collection>
-            <e-accumulation-series [dataSource]='piedata' xName='x' yName='y' type='Pie'></e-accumulation-series>
+            <e-accumulation-series [dataSource]='piedata' xName='x' yName='y' type='Pie'
+            [startAngle]='startAngle' [endAngle]='endAngle' [dataLabel]='datalabel'>
+        </e-accumulation-series>
         </e-accumulation-series-collection>
     </ejs-accumulationchart>
 </div>
