--- a/src/frontend/realtime-app-ui/src/app/components/navbar/navbar.component.html
+++ b/src/frontend/realtime-app-ui/src/app/components/navbar/navbar.component.html
@@ -25,6 +25,12 @@
           </div>
         </a>
         <mat-menu #menu="matMenu">
+          <button [routerLink]="['dashboard']" mat-menu-item>
+            <mat-icon>dashboard</mat-icon>
+            <span>
+              Dashboard
+            </span>
+          </button>
           <button [routerLink]="['profile',userDetail.id]" mat-menu-item>
             <mat-icon>account_circle</mat-icon>
             <span>
