--- a/src/frontend/realtime-app-ui/src/app/pages/dashboard/dashboard.component.html
+++ b/src/frontend/realtime-app-ui/src/app/pages/dashboard/dashboard.component.html
@@ -19,11 +19,11 @@
     </ejs-accumulationchart>
 
     <div *ngIf="!isOn">
-        <ejs-dialog id='dialog' #ejDialog content='This is a Dialog with content' width='500px' width='500px' showCloseIcon='true'>
+        <ejs-dialog id='dialog' #ejDialog content='Detay Bilgi' width='500px' width='500px' showCloseIcon='true'>
             
                 <div style="padding: 15px;">
-                    <h4>Details</h4>
-                    <p>Currency: {{currencyDetail.currency}}</p>
+                    <h4>Döviz Detayları</h4>
+                    <p>Döviz Kodu: {{currencyDetail.currency}}</p>
                     <p>Günlük İşlem Sayısı: {{currencyDetail.dailyTransaction}}</p>
                     <p>Günlük İşlem Hacmi: {{currencyDetail.dailyTradingVolume}}</p>
                     <p>Saatlik İşlem Hacmi: {{currencyDetail.hourlyTradingVolume}}</p>
